exercises/ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes: 
        - name: shared-ping
          emptyDir: {}
      containers:
        - name: pingpong
          image: EXERCISES/PING_PONG
          volumeMounts:
          - name: shared-ping
            mountPath: /usr/src/app/ping
